// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Builder of transaction data for confirmation Approve transaction 1`] = `
Array [
  Object {
    "key": Object {
      "type": "placeholder",
    },
    "value": Object {
      "type": "localizable",
      "value": Object {
        "args": Array [
          "BUSD",
        ],
        "format": "To continue, you need to allow 1inch smart contracts to use your %%0%%. This has to be done only once for each token.",
      },
    },
  },
  Object {
    "key": Object {
      "type": "token",
      "value": Object {
        "token": Object {
          "address": "0x4fabb145d64652a948d72533023f6e7a623c7c53",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0x4fabb145d64652a948d72533023f6e7a623c7c53.png",
          "name": "Binance USD",
          "symbol": "BUSD",
        },
        "type": "amount",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "0",
        "token": Object {
          "address": "0x4fabb145d64652a948d72533023f6e7a623c7c53",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0x4fabb145d64652a948d72533023f6e7a623c7c53.png",
          "name": "Binance USD",
          "symbol": "BUSD",
        },
        "value": "115792089237316195423570985008687907853269984665640564039457584007913129639935",
      },
    },
  },
  Object {
    "key": Object {
      "type": "wallet",
      "value": Object {
        "type": "own",
      },
    },
    "value": Object {
      "type": "text",
      "value": Object {
        "text": "0x3b608c5243732903152e38f1dab1056a4a79b980",
        "type": "address",
      },
    },
  },
  Object {
    "key": Object {
      "type": "placeholder",
    },
    "value": Object {
      "type": "placeholder",
      "value": Object {
        "type": "fee",
      },
    },
  },
]
`;

exports[`Builder of transaction data for confirmation Swap transaction: clipperSwap() 1`] = `
Array [
  Object {
    "key": Object {
      "type": "token",
      "value": Object {
        "token": Object {
          "address": "0x6b175474e89094c44da98b954eedeac495271d0f",
          "decimals": 18,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0x6b175474e89094c44da98b954eedeac495271d0f.png",
          "name": "Dai Stablecoin",
          "symbol": "DAI",
        },
        "type": "from",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "-",
        "token": Object {
          "address": "0x6b175474e89094c44da98b954eedeac495271d0f",
          "decimals": 18,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0x6b175474e89094c44da98b954eedeac495271d0f.png",
          "name": "Dai Stablecoin",
          "symbol": "DAI",
        },
        "value": Object {
          "hex": "0x1bc16d674ec80000",
          "type": "BigNumber",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "token",
      "value": Object {
        "token": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "type": "to",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "+",
        "token": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "value": "459483882860783",
      },
    },
  },
  Object {
    "key": Object {
      "type": "wallet",
      "value": Object {
        "type": "own",
      },
    },
    "value": Object {
      "type": "text",
      "value": Object {
        "text": "0x3b608c5243732903152e38f1dab1056a4a79b980",
        "type": "address",
      },
    },
  },
  Object {
    "key": Object {
      "type": "placeholder",
    },
    "value": Object {
      "type": "placeholder",
      "value": Object {
        "type": "fee",
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Sell price",
      },
    },
    "value": Object {
      "type": "rate",
      "value": Object {
        "destinationAmount": "0.0002297419414303915",
        "destinationToken": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "sourceAmount": "1",
        "sourceToken": Object {
          "address": "0x6b175474e89094c44da98b954eedeac495271d0f",
          "decimals": 18,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0x6b175474e89094c44da98b954eedeac495271d0f.png",
          "name": "Dai Stablecoin",
          "symbol": "DAI",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Buy price",
      },
    },
    "value": Object {
      "type": "rate",
      "value": Object {
        "destinationAmount": "4352.70980028253",
        "destinationToken": Object {
          "address": "0x6b175474e89094c44da98b954eedeac495271d0f",
          "decimals": 18,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0x6b175474e89094c44da98b954eedeac495271d0f.png",
          "name": "Dai Stablecoin",
          "symbol": "DAI",
        },
        "sourceAmount": "1",
        "sourceToken": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Minimum Received",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "0",
        "token": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "value": Object {
          "hex": "0x018227176f419e",
          "type": "BigNumber",
        },
      },
    },
  },
]
`;

exports[`Builder of transaction data for confirmation Swap transaction: clipperSwapWithPermit() 1`] = `
Array [
  Object {
    "key": Object {
      "type": "token",
      "value": Object {
        "token": Object {
          "address": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
          "decimals": 6,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48.png",
          "name": "USD Coin",
          "symbol": "USDC",
        },
        "type": "from",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "-",
        "token": Object {
          "address": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
          "decimals": 6,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48.png",
          "name": "USD Coin",
          "symbol": "USDC",
        },
        "value": Object {
          "hex": "0x1e8480",
          "type": "BigNumber",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "token",
      "value": Object {
        "token": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "type": "to",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "+",
        "token": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "value": "425128486899692",
      },
    },
  },
  Object {
    "key": Object {
      "type": "wallet",
      "value": Object {
        "type": "own",
      },
    },
    "value": Object {
      "type": "text",
      "value": Object {
        "text": "0x3b608c5243732903152e38f1dab1056a4a79b980",
        "type": "address",
      },
    },
  },
  Object {
    "key": Object {
      "type": "placeholder",
    },
    "value": Object {
      "type": "placeholder",
      "value": Object {
        "type": "fee",
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Sell price",
      },
    },
    "value": Object {
      "type": "rate",
      "value": Object {
        "destinationAmount": "0.000212564243449846",
        "destinationToken": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "sourceAmount": "1",
        "sourceToken": Object {
          "address": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
          "decimals": 6,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48.png",
          "name": "USD Coin",
          "symbol": "USDC",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Buy price",
      },
    },
    "value": Object {
      "type": "rate",
      "value": Object {
        "destinationAmount": "4704.4600906076075",
        "destinationToken": Object {
          "address": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
          "decimals": 6,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48.png",
          "name": "USD Coin",
          "symbol": "USDC",
        },
        "sourceAmount": "1",
        "sourceToken": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Minimum Received",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "0",
        "token": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "value": Object {
          "hex": "0x018243f4d027f8",
          "type": "BigNumber",
        },
      },
    },
  },
]
`;

exports[`Builder of transaction data for confirmation Swap transaction: swap() 1`] = `
Array [
  Object {
    "key": Object {
      "type": "token",
      "value": Object {
        "token": Object {
          "address": "0xdac17f958d2ee523a2206206994597c13d831ec7",
          "decimals": 6,
          "logoURI": "https://tokens.1inch.io/0xdac17f958d2ee523a2206206994597c13d831ec7.png",
          "name": "Tether USD",
          "symbol": "USDT",
        },
        "type": "from",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "-",
        "token": Object {
          "address": "0xdac17f958d2ee523a2206206994597c13d831ec7",
          "decimals": 6,
          "logoURI": "https://tokens.1inch.io/0xdac17f958d2ee523a2206206994597c13d831ec7.png",
          "name": "Tether USD",
          "symbol": "USDT",
        },
        "value": Object {
          "hex": "0x1aa5803219",
          "type": "BigNumber",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "token",
      "value": Object {
        "token": Object {
          "address": "0x853d955acef822db058eb8505911ed77f175b99e",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0x853d955acef822db058eb8505911ed77f175b99e.png",
          "name": "Frax",
          "symbol": "FRAX",
        },
        "type": "to",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "+",
        "token": Object {
          "address": "0x853d955acef822db058eb8505911ed77f175b99e",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0x853d955acef822db058eb8505911ed77f175b99e.png",
          "name": "Frax",
          "symbol": "FRAX",
        },
        "value": "114241200360986751251430",
      },
    },
  },
  Object {
    "key": Object {
      "type": "wallet",
      "value": Object {
        "type": "own",
      },
    },
    "value": Object {
      "type": "text",
      "value": Object {
        "text": "0x64741d0b9e376d75873c12e1b0cdccc26c3bcb04",
        "type": "address",
      },
    },
  },
  Object {
    "key": Object {
      "type": "placeholder",
    },
    "value": Object {
      "type": "placeholder",
      "value": Object {
        "type": "fee",
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Sell price",
      },
    },
    "value": Object {
      "type": "rate",
      "value": Object {
        "destinationAmount": "0.9982123291311034",
        "destinationToken": Object {
          "address": "0x853d955acef822db058eb8505911ed77f175b99e",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0x853d955acef822db058eb8505911ed77f175b99e.png",
          "name": "Frax",
          "symbol": "FRAX",
        },
        "sourceAmount": "1",
        "sourceToken": Object {
          "address": "0xdac17f958d2ee523a2206206994597c13d831ec7",
          "decimals": 6,
          "logoURI": "https://tokens.1inch.io/0xdac17f958d2ee523a2206206994597c13d831ec7.png",
          "name": "Tether USD",
          "symbol": "USDT",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Buy price",
      },
    },
    "value": Object {
      "type": "rate",
      "value": Object {
        "destinationAmount": "1.0017908723592432",
        "destinationToken": Object {
          "address": "0xdac17f958d2ee523a2206206994597c13d831ec7",
          "decimals": 6,
          "logoURI": "https://tokens.1inch.io/0xdac17f958d2ee523a2206206994597c13d831ec7.png",
          "name": "Tether USD",
          "symbol": "USDT",
        },
        "sourceAmount": "1",
        "sourceToken": Object {
          "address": "0x853d955acef822db058eb8505911ed77f175b99e",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0x853d955acef822db058eb8505911ed77f175b99e.png",
          "name": "Frax",
          "symbol": "FRAX",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Minimum Received",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "0",
        "token": Object {
          "address": "0x853d955acef822db058eb8505911ed77f175b99e",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0x853d955acef822db058eb8505911ed77f175b99e.png",
          "name": "Frax",
          "symbol": "FRAX",
        },
        "value": Object {
          "hex": "0x181b5805bbc9ae4bb3e6",
          "type": "BigNumber",
        },
      },
    },
  },
]
`;
